# stimer

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
src/: stimer.c  stimer.h
test/: 01-one-shot.c  02-loop-mode.c  03-multiple-overflow.c  04-one-shot-cb.c  05-loop-mode-cb.c  06-custom-argument.c  07-multiple-timers.c  CMakeLists.txt  Makefile  test_stimer.c
